--- a/LearningTask-13.1/View/Base.lproj/Main.storyboard
+++ b/LearningTask-13.1/View/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
         <!--Movies View Controller-->
         <scene sceneID="epq-ya-izj">
             <objects>
-                <collectionViewController id="A2b-Ow-rVP" customClass="MoviesViewController" customModule="LearningTask_13_1" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="HomeController" id="A2b-Ow-rVP" customClass="MoviesViewController" customModule="LearningTask_13_1" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="zbc-vq-fvp">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
