--- a/LearningTask-13.1/View/Base.lproj/Main.storyboard
+++ b/LearningTask-13.1/View/Base.lproj/Main.storyboard
@@ -9,88 +9,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Movie Sessions View Controller-->
-        <scene sceneID="DY4-j4-cSy">
-            <objects>
-                <tableViewController storyboardIdentifier="MovieSessionsViewController" id="fU3-q8-QD6" customClass="MovieSessionsViewController" customModule="LearningTask_13_1" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="9CN-OF-Szn">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SessionCell" id="edp-mi-bNc" customClass="SessionViewCell" customModule="LearningTask_13_1" customModuleProvider="target">
-                                <rect key="frame" x="20" y="55.5" width="374" height="48.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="edp-mi-bNc" id="egC-Mt-xj1">
-                                    <rect key="frame" x="0.0" y="0.0" width="374" height="48.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="CqF-2A-9sK" userLabel="Content Stack View">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="48.5"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Film" translatesAutoresizingMaskIntoConstraints="NO" id="FZb-Te-pkW" userLabel="Film Icon Image View">
-                                                    <rect key="frame" x="12" y="12.5" width="24" height="24"/>
-                                                    <color key="tintColor" systemColor="secondaryLabelColor"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="24" id="ITv-rv-2m9"/>
-                                                        <constraint firstAttribute="width" constant="24" id="c0A-5s-s71"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="18:15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PB6-w6-LHT" userLabel="Hours Label">
-                                                    <rect key="frame" x="48" y="16" width="229.5" height="17"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
-                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Legendado" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Grm-qI-2ul" userLabel="Session Type Label">
-                                                    <rect key="frame" x="289.5" y="16" width="72.5" height="17"/>
-                                                    <fontDescription key="fontDescription" type="italicSystem" pointSize="14"/>
-                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <directionalEdgeInsets key="directionalLayoutMargins" top="12" leading="12" bottom="12" trailing="12"/>
-                                        </stackView>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="CqF-2A-9sK" secondAttribute="bottom" id="LmH-9h-thJ"/>
-                                        <constraint firstItem="CqF-2A-9sK" firstAttribute="leading" secondItem="egC-Mt-xj1" secondAttribute="leading" id="S5A-0C-2SB"/>
-                                        <constraint firstItem="CqF-2A-9sK" firstAttribute="top" secondItem="egC-Mt-xj1" secondAttribute="top" id="oWQ-en-JUe"/>
-                                        <constraint firstAttribute="trailing" secondItem="CqF-2A-9sK" secondAttribute="trailing" id="r0Q-Gc-sIE"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
-                                <connections>
-                                    <outlet property="hoursLabel" destination="PB6-w6-LHT" id="srK-hC-y16"/>
-                                    <outlet property="sessionTypeLabel" destination="Grm-qI-2ul" id="uWV-d4-WS5"/>
-                                    <segue destination="kdT-E6-h1M" kind="showDetail" identifier="seePurchaseSettingsSegue" id="WW9-SX-J2W"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="fU3-q8-QD6" id="MCQ-yK-nfP"/>
-                            <outlet property="delegate" destination="fU3-q8-QD6" id="vAX-2A-mTo"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="hJ9-Da-2yN"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ALc-2o-vqu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="17" y="76"/>
-        </scene>
         <!--Purchase Settings View Controller-->
         <scene sceneID="yT6-aR-9s3">
             <objects>
-                <viewController id="kdT-E6-h1M" customClass="PurchaseSettingsViewController" customModule="LearningTask_13_1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PurchaseSettingsViewController" id="kdT-E6-h1M" customClass="PurchaseSettingsViewController" customModule="LearningTask_13_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dq3-dg-n3T">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="838"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="WQ9-mU-Ezj" userLabel="Container Stack View">
-                                <rect key="frame" x="0.0" y="48" width="414" height="790"/>
+                                <rect key="frame" x="0.0" y="48" width="414" height="814"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ceg-2F-9hq">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="728"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="752"/>
                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PurchaseSettingsMenuItemCell" id="nu7-Ex-V9k" customClass="PurchaseSettingsMenuItemCell" customModule="LearningTask_13_1" customModuleProvider="target">
@@ -164,7 +95,7 @@
                                         </connections>
                                     </tableView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xVK-VM-fVq" userLabel="Footer View">
-                                        <rect key="frame" x="0.0" y="728" width="414" height="62"/>
+                                        <rect key="frame" x="0.0" y="752" width="414" height="62"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$ 0,00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3j1-wr-JVc">
                                                 <rect key="frame" x="170" y="19" width="74.5" height="24"/>
@@ -201,11 +132,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Film" width="512" height="512"/>
         <image name="Forward Arrow" width="96" height="96"/>
-        <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
